--- a/GoodFoodMKE/GoodFoodMKE.csproj
+++ b/GoodFoodMKE/GoodFoodMKE.csproj
@@ -196,42 +196,51 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AppUsersController.cs" />
+    <Compile Include="Controllers\FarmsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MarketsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201807102052414_initialMigration.cs" />
-    <Compile Include="Migrations\201807102052414_initialMigration.Designer.cs">
-      <DependentUpon>201807102052414_initialMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201807161509450_newdatabase.cs" />
-    <Compile Include="Migrations\201807161509450_newdatabase.Designer.cs">
-      <DependentUpon>201807161509450_newdatabase.cs</DependentUpon>
+    <Compile Include="Ignored\API.cs" />
+    <Compile Include="Migrations\201807261659587_initial migration.cs" />
+    <Compile Include="Migrations\201807261659587_initial migration.Designer.cs">
+      <DependentUpon>201807261659587_initial migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\AppUser.cs" />
     <Compile Include="Models\Farm.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\Location.cs" />
-    <Compile Include="Models\LocationType.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Market.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductType.cs" />
+    <Compile Include="Models\RoleName.cs" />
+    <Compile Include="Models\ViewModels\FarmViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Image\brookfield_logo.jpeg" />
+    <Content Include="Image\brookfield_market.jpeg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Image\farm_market_banner.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Image\gravatar.png" />
+    <Content Include="Image\honeygrove_logo.jpg" />
+    <Content Include="Image\honeygrove_photo.jpg" />
+    <Content Include="Image\logo.png" />
+    <Content Include="Image\register.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -282,9 +291,27 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Markets\Index.cshtml" />
+    <Content Include="Views\Shared\_EventPartial.cshtml" />
+    <Content Include="Views\Markets\Create.cshtml" />
+    <Content Include="Views\Markets\Delete.cshtml" />
+    <Content Include="Views\Markets\Details.cshtml" />
+    <Content Include="Views\Markets\Edit.cshtml" />
+    <Content Include="Views\Locations\Create.cshtml" />
+    <Content Include="Views\Locations\Delete.cshtml" />
+    <Content Include="Views\Locations\Details.cshtml" />
+    <Content Include="Views\Locations\Edit.cshtml" />
+    <Content Include="Views\Locations\Index.cshtml" />
+    <Content Include="Views\Farms\Create.cshtml" />
+    <Content Include="Views\Farms\Delete.cshtml" />
+    <Content Include="Views\Farms\Details.cshtml" />
+    <Content Include="Views\Farms\Edit.cshtml" />
+    <Content Include="Views\Farms\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\AppUsers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -300,11 +327,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201807102052414_initialMigration.resx">
-      <DependentUpon>201807102052414_initialMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201807161509450_newdatabase.resx">
-      <DependentUpon>201807161509450_newdatabase.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807261659587_initial migration.resx">
+      <DependentUpon>201807261659587_initial migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
