--- a/GoodFoodMKE/GoodFoodMKE.csproj
+++ b/GoodFoodMKE/GoodFoodMKE.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201807301556337_addWebAddressField.Designer.cs">
       <DependentUpon>201807301556337_addWebAddressField.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807301648355_addFarmActiveBool.cs" />
+    <Compile Include="Migrations\201807301648355_addFarmActiveBool.Designer.cs">
+      <DependentUpon>201807301648355_addFarmActiveBool.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -302,14 +306,9 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Shared\_EventPartial.cshtml" />
-    <Content Include="Views\Locations\Create.cshtml" />
-    <Content Include="Views\Locations\Delete.cshtml" />
-    <Content Include="Views\Locations\Details.cshtml" />
-    <Content Include="Views\Locations\Edit.cshtml" />
-    <Content Include="Views\Locations\Index.cshtml" />
-    <Content Include="Views\Farm\Index.cshtml" />
+    <Content Include="Views\Farms\Index.cshtml" />
+    <Content Include="Views\Farms\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -340,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807301556337_addWebAddressField.resx">
       <DependentUpon>201807301556337_addWebAddressField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807301648355_addFarmActiveBool.resx">
+      <DependentUpon>201807301648355_addFarmActiveBool.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
