add create views, blogs and comments models

--- a/GoodFoodMKE/Views/Web.config
+++ b/GoodFoodMKE/Views/Web.config
@@ -18,12 +18,15 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="GoodFoodMKE" />
+        <add namespace="GoodFoodMKE.Models"/>
+        <add namespace="GoodFoodMKE.Models.ViewModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="UPLOAD_PATH" value="~/Image"/>
   </appSettings>
 
   <system.webServer>
