--- a/GoodFoodMKE/GoodFoodMKE.csproj
+++ b/GoodFoodMKE/GoodFoodMKE.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Controllers\FarmController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MarketController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -224,10 +225,20 @@
     <Compile Include="Migrations\201807301648355_addFarmActiveBool.Designer.cs">
       <DependentUpon>201807301648355_addFarmActiveBool.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808012001412_add blog and comment.cs" />
+    <Compile Include="Migrations\201808012001412_add blog and comment.Designer.cs">
+      <DependentUpon>201808012001412_add blog and comment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808012003248_add comments and blogs.cs" />
+    <Compile Include="Migrations\201808012003248_add comments and blogs.Designer.cs">
+      <DependentUpon>201808012003248_add comments and blogs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\AppUser.cs" />
+    <Compile Include="Models\BlogEntry.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Farm.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -235,7 +246,9 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductType.cs" />
     <Compile Include="Models\RoleName.cs" />
+    <Compile Include="Models\ViewModels\AdminViewModel.cs" />
     <Compile Include="Models\ViewModels\FarmViewModel.cs" />
+    <Compile Include="Models\ViewModels\MarketViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -272,6 +285,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Index.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -279,7 +293,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -307,8 +323,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_EventPartial.cshtml" />
-    <Content Include="Views\Farms\Index.cshtml" />
-    <Content Include="Views\Farms\Create.cshtml" />
+    <Content Include="Views\Farm\Index.cshtml" />
+    <Content Include="Views\Farm\Create.cshtml" />
+    <Content Include="Views\Market\Create.cshtml" />
+    <Content Include="Views\Market\Index.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -342,6 +361,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807301648355_addFarmActiveBool.resx">
       <DependentUpon>201807301648355_addFarmActiveBool.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808012001412_add blog and comment.resx">
+      <DependentUpon>201808012001412_add blog and comment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808012003248_add comments and blogs.resx">
+      <DependentUpon>201808012003248_add comments and blogs.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
