--- a/GoodFoodMKE/Web.config
+++ b/GoodFoodMKE/Web.config
@@ -19,6 +19,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="UPLOAD_PATH" value="C:\Users\schra\Desktop\DevCodeCamp\ASP.Net\GoodFood\GoodFoodMKE\Image"/>
   </appSettings>
   <system.web>
     <authentication mode="None"/>
